@@ -486,6 +486,7 @@ data.frame <-
 {
     mdrop <- missing(drop)
     Narg <- nargs() - !mdrop  # number of arg from x,i,j that were specified
+    has.j <- !missing(j)
 
     if(Narg < 3) {  # list-like indexing or matrix indexing
         if(!mdrop) warning("drop argument will be ignored")
@@ -614,7 +615,8 @@ data.frame <-
 		rows <- make.unique(as.character(rows))
 	}
         ## new in 1.8.0  -- might have duplicate columns
-        if(any(duplicated(nm <- names(x)))) names(x) <- make.unique(nm)
+        if(has.j && any(duplicated(nm <- names(x))))
+            names(x) <- make.unique(nm)
         if(is.null(rows)) rows <- attr(xx, "row.names")[i]
 	attr(x, "row.names") <- rows
 	oldClass(x) <- oldClass(xx)
