@@ -42,6 +42,9 @@ NEW FEATURES
     o	installed.packages() is now tolerant of malformed DESCRIPTION
 	files in installed packages (it ignores them, with a warning).
 
+    o	install.packages() is able to infer that repos=NULL was
+	intended from the extension on the filename specified as 'pkgs'.
+
 
 DEPRECATED & DEFUNCT
 
@@ -65,6 +68,15 @@ BUG FIXES
 	factor response.
 
     o	The postscript() output for setting text is faster and smaller.
+
+    o	aggregate.data.frame() now does something sensible with a
+	zero-column 'x' rather than failing with an obscure error
+	message.  It gives an explicit error message if called with a
+	zero-row 'x'.
+
+    o	Subsetting a data frame with duplicate column names without
+	selecting columns (e.g. z[i,]) no longer makes the column
+	names unique.
 
 
 
